Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30801

Button: tooltip not shown when the button is disabled

XMLWordPrintable

    • 831efa14e91cfa358e57a32197578d41c2ae1b24 (qt/qtdeclarative/dev), e32b292cd (dev), 210a99f58 (6.10), b26912b63 (6.9), 0c14028c5 (tqtc/lts-6.8)
    • Bug Fixing Week Q2/2020

      The tooltip is not shown when the mouse is hovered above a disabled button.

      import QtQuick 2.1
      import QtQuick.Controls 1.0
      
      Item {
          width: 300
          height: 300
          Button {
              text: "button"
              tooltip: "hello button"
              enabled: false
          }
      }
      

      For controls 2: Following code is not showing toolTip when a button is disabled

          Button {
              id: conbutton
              text: "test"
              enabled: false
              ToolTip.visible : hovered
              ToolTip.text : "test tooltip"
      
          }
      

        1. main-controls1.qml
          0.2 kB
          Shawn Rutledge
        2. main-controls2.qml
          0.2 kB
          Shawn Rutledge
        3. main-controls2-workaround.qml
          0.5 kB
          Shawn Rutledge
        For Gerrit Dashboard: QTBUG-30801
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            carochao Caroline Chao (Inactive)
            Votes:
            24 Vote for this issue
            Watchers:
            28 Start watching this issue

              Created:
              Updated:
              Resolved: